sshme-in/apps/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  label:
    istio.io/dataplane-mode: ambient
